--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   floating_bottom_navigation_bar: ^1.5.2
+  liquid_ui:
+  shrink_sidemenu:
 
 dev_dependencies:
   flutter_test:
