--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
-	"files.exclude": {
-		"windows": true,
-		"web": true,
-		"macos": true,
-		"linux": true,
-		"ios": true,
-		"build": true,
-		"android": true,
-		".idea": true,
-		".dart_tool": true,
-		"analysis_options.yaml": true,
-		".metadata": true
-	}
+  "files.exclude": {
+    "windows": true,
+    "web": true,
+    "macos": true,
+    "linux": true,
+    "ios": true,
+    "build": true,
+    "android": true,
+    ".idea": true,
+    ".dart_tool": true,
+    "analysis_options.yaml": true,
+    ".metadata": true,
+    ".flutter-plugins": true,
+    ".flutter-plugins-dependencies": true,
+    "ustp_trailmap.iml": true
+  }
 }
