--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,15 @@
     "web": true,
     "macos": true,
     "linux": true,
-    "ios": true,
-    "build": true,
-    "android": true,
     ".idea": true,
     ".dart_tool": true,
     "analysis_options.yaml": true,
     ".metadata": true,
     ".flutter-plugins": true,
     ".flutter-plugins-dependencies": true,
-    "ustp_trailmap.iml": true
+    "ustp_trailmap.iml": true,
+    "ios": true,
+    "android": true,
+    "build": true
   }
 }
