--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"@react-navigation/native": "5.*",
 		"expo": "~47.0.9",
 		"expo-status-bar": "~1.4.2",
+		"expo-updates": "~0.15.6",
 		"react": "18.1.0",
 		"react-native": "0.70.5",
 		"react-native-gesture-handler": "^2.8.0",
 		"react-native-reanimated": "~2.12.0",
 		"react-native-safe-area-context": "^4.4.1",
-		"react-native-screens": "^3.18.2"
+		"react-native-screens": "^3.18.2",
+		"react-native-webview": "11.23.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9"
