--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
 		"@react-native-community/masked-view": "^0.1.11",
 		"@react-navigation/bottom-tabs": "^5.*",
 		"@react-navigation/native": "5.*",
-		"expo": "~47.0.9",
-		"expo-asset": "^8.7.0",
-		"expo-updates": "~0.15.6",
-		"react": "18.1.0",
-		"react-native": "0.70.5",
-		"react-native-gesture-handler": "^2.8.0",
-		"react-native-reanimated": "~2.12.0",
-		"react-native-safe-area-context": "^4.4.1",
-		"react-native-screens": "^3.18.2",
-		"react-native-webview": "11.23.1"
+		"expo": "^48.0.0",
+		"expo-asset": "~8.9.1",
+		"expo-cli": "^6.3.8",
+		"expo-updates": "~0.16.4",
+		"react": "18.2.0",
+		"react-native": "0.71.3",
+		"react-native-gesture-handler": "~2.9.0",
+		"react-native-reanimated": "~2.14.4",
+		"react-native-safe-area-context": "4.5.0",
+		"react-native-screens": "~3.20.0",
+		"react-native-webview": "11.26.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.9"
+		"@babel/core": "^7.20.0"
 	},
 	"private": true
 }
